--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -32,6 +32,7 @@
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="NodeBSP.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Shader3D.cpp" />
     <ClCompile Include="Renderizer.cpp" />
@@ -60,6 +61,7 @@
     <ClInclude Include="Material.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Model.h" />
+    <ClInclude Include="NodeBSP.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Shader3D.h" />
     <ClInclude Include="Renderizer.h" />
