--- a/GameEngine/GameEngine.vcxproj.filters
+++ b/GameEngine/GameEngine.vcxproj.filters
@@ -108,6 +108,9 @@
     <ClCompile Include="Frustum.cpp">
       <Filter>Archivos de origen\3D</Filter>
     </ClCompile>
+    <ClCompile Include="NodeBSP.cpp">
+      <Filter>Archivos de origen\3D</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AABB.h">
@@ -189,6 +192,9 @@
       <Filter>Archivos de encabezado\3D</Filter>
     </ClInclude>
     <ClInclude Include="Frustum.h">
+      <Filter>Archivos de encabezado\3D</Filter>
+    </ClInclude>
+    <ClInclude Include="NodeBSP.h">
       <Filter>Archivos de encabezado\3D</Filter>
     </ClInclude>
   </ItemGroup>
